src/views/page/style.module.scss
@import "../../styles/colors";

.content-container {

  margin-bottom: 3rem;

  .toc {
    padding-left: 1rem;
    padding-bottom: 1rem;
    background-color: white;
  }

  text-align: justify;

  .last-update {
    float: right;
    font-size: 1rem;
    margin-top: -1rem;
  }

  @media only screen and (max-width: 900px) {
    .last-update {
      float: none;
    }
  }

  @media only screen and (max-width: 500px) {
    :global(.sub.header) {
      overflow: hidden;
    }
    .last-update {
      margin-top: 0;
    }
  }

  position: relative;
  line-height: 1.5;
  td {
    vertical-align: top;
    padding-top: .5rem;
    padding-bottom: .5rem;
  }
  table ul, table ol {
    margin-top: 0;
    margin-bottom: 0;
  }
  table strong, table b {
    font-weight: 700;
  }
  p {
    font-size: 1.15rem;
  }
  section[data-level="1"] {
    margin-top: .6rem;
  }
  section[data-level="2"] {
    margin-top: 1.8rem;
  }
  section[data-level="3"] {
    margin-top: 1.5rem;
  }
  section[data-level="4"] {
    margin-top: 1rem;
  }
  section[data-level]:first-child {
    margin-top: 0;
  }
  h1, h2, h3, h4, h5, h6 {
    text-align: left;
  }
  h1 {
    &:global(.ui.header) {
      font-size: 2.3rem;
    }
    margin-top: .6rem;
    margin-bottom: 1.5rem;
    text-transform: uppercase;
  }
  h2 {
    font-size: 2.15rem;
    margin-top: 1.8rem;
    margin-bottom: 1.2rem;
  }
  h3 {
    font-size: 1.6rem;
    margin-top: 1.5rem;
    margin-bottom: 1rem;
  }
  h4 {
    font-size: 1.4rem;
    margin-top: 1rem;
    margin-bottom: .7rem;
  }
  img.fullwidth {
    width: 100%;
  }
  a {
    color: $link-color;
    &:hover {
      text-decoration: underline;
    }
    &[role="button"]:hover {
      text-decoration: none;
    }
  }
  ul, ol {
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding-left: 1rem;
  }
  li {
    margin-top: .5rem;
    margin-bottom: .5rem;
    &:first-child {
      margin-top: 0;
    }
    &:last-child {
      margin-bottom: 0;
    }
  }
  p.center {
    text-align: center;
  }
  p.pull-right {
    float: right;
  }
  &[data-page-name="updates"] {
    p {
      margin-bottom: 0;
    }
    p + ul, p + ol {
      margin-top: 0;
    }
    li {
      margin-top: 0;
      margin-bottom: 0;
    }
  }
  iframe.dynamic-html {
    border: 0;
    position: relative;
    width: 100%;
    height: 100vw;
  }
}

